--- a/src/ICU-Browser-UI/resource.qrc
+++ b/src/ICU-Browser-UI/resource.qrc
@@ -31,5 +31,6 @@
         <file alias="delete.svg">assets/icons/delete.svg</file>
         <file alias="search.svg">assets/icons/search.svg</file>
         <file alias="locker.svg">assets/icons/locker.svg</file>
+        <file alias="back.svg">assets/icons/back.svg</file>
     </qresource>
 </RCC>
