Presenter层下载管理逻辑

--- a/src/ICU-Browser-UI/resource.qrc
+++ b/src/ICU-Browser-UI/resource.qrc
@@ -10,6 +10,7 @@
         <file>LoginWindow.qml</file>
         <file>RegisterWindow.qml</file>
         <file>UserWindow.qml</file>
+        <file>DownloadWindow.qml</file>
     </qresource>
     <qresource prefix="/icons">
         <file alias="stackoverflow.svg">assets/icons/stackoverflow.svg</file>
