添加应用图标以及标题 修复登录注册后文本框不清空的bug

--- a/src/ICU-Browser-UI/resource.qrc
+++ b/src/ICU-Browser-UI/resource.qrc
@@ -34,5 +34,6 @@
         <file alias="locker.svg">assets/icons/locker.svg</file>
         <file alias="back.svg">assets/icons/back.svg</file>
         <file alias="pause.svg">assets/icons/pause.svg</file>
+        <file alias="ICU.png">assets/icons/ICU.png</file>
     </qresource>
 </RCC>
